network-policy/block-b.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: b
spec:
  podSelector:
    matchLabels: {}
